@@ -1,3 +1,6 @@
+Version 2012060201 Sat Jun  2 01:49:14 CEST 2012
++ New theme: kodokan
+
 Version 2012060103 Fri Jun  1 22:47:55 CEST 2012
 + New theme: willy_wonka
 
